Added POINTLOCK and MEASURELOCK parameters, updated documentation, added appTests, gave more meaningful names to existing appTests.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2829 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/mat2cnet/tsts/defaultparam/Makefile
+++ b/isis/src/control/apps/mat2cnet/tsts/defaultparam/Makefile
@@ -1,3 +1,6 @@
+# Test for mat2cnet with default parameters - 
+#      no PPP file 
+#      EditLock=False in Measures
 APPNAME = mat2cnet
 
 include $(ISISROOT)/make/isismake.tsts
@@ -7,14 +10,10 @@ commands:
 	ls $(INPUT)/Isis3_cube*.cub >& $(OUTPUT)/cub3.lis;
 	$(APPNAME) list2=$(OUTPUT)/cub2.lis \
 	match=$(INPUT)/pts.mat \
-    inputppp=true \
-	ppp=$(INPUT)/rand.ppp \
 	list3=$(OUTPUT)/cub3.lis \
-	onet=$(OUTPUT)/mat2cnetTruth3.net \
-	pointtype=Free \
-	description="PointTypeTie Test Network" \
-	networkid=TestNet03 \
+	onet=$(OUTPUT)/mat2cnetTruth1.net \
+	description="Default Parameters Test Network" \
+	networkid=TestNet01 \
 	target=Titan > /dev/null;
-	mv randOnlyPoints.log $(OUTPUT)/randOnlyPoints.txt;
 	rm -f $(OUTPUT)/cub2.lis;
 	rm -f $(OUTPUT)/cub3.lis;
