--- a/isis/src/control/apps/mat2cnet/tsts/errors/Makefile
+++ b/isis/src/control/apps/mat2cnet/tsts/errors/Makefile
@@ -1,3 +1,5 @@
+# Test for output errors in mat2cnet.  No control net will be output, instead
+# we will have a text file containing the errors.
 .IGNORE:
 
 APPNAME = mat2cnet
