--- a/isis/src/control/apps/mat2cnet/tsts/pppfixedlocked/Makefile
+++ b/isis/src/control/apps/mat2cnet/tsts/pppfixedlocked/Makefile
@@ -1,3 +1,5 @@
+# Test for mat2cnet using PPP file with default parameters POINTTYPE=Fixed and 
+# POINTLOCK=true.  Then, default LOG file is moved to OUTPUT directory
 APPNAME = mat2cnet
 
 include $(ISISROOT)/make/isismake.tsts
@@ -6,14 +8,14 @@ commands:
 	ls $(INPUT)/Isis2_cube*.cub >& $(OUTPUT)/cub2.lis;
 	ls $(INPUT)/Isis3_cube*.cub >& $(OUTPUT)/cub3.lis;
 	$(APPNAME) list2=$(OUTPUT)/cub2.lis \
-	match=$(INPUT)/match.mat \
+	match=$(INPUT)/matchpointfile.mat \
 	inputppp=true \
 	ppp=$(INPUT)/rand.ppp \
 	list3=$(OUTPUT)/cub3.lis \
 	onet=$(OUTPUT)/mat2cnetTruth2.net \
-	description="Rand Test Network - Default Ground Point Type" \
+	description="Rand Test Network - Default Fixed Point Type, Locked Points" \
 	networkid=TestNet02 \
-	target=Titan \
-    log=$(OUTPUT)/randppp.txt > /dev/null;
+	target=Titan > /dev/null;
+	mv pppOnlyPoints.log $(OUTPUT)/pppOnlyPoints.txt;
 	rm -f $(OUTPUT)/cub2.lis;
 	rm -f $(OUTPUT)/cub3.lis;
