--- a/isis/src/control/apps/mat2cnet/tsts/measurelocked/Makefile
+++ b/isis/src/control/apps/mat2cnet/tsts/measurelocked/Makefile
@@ -1,3 +1,4 @@
+# Test for mat2cnet with EditLock=True in Measures
 APPNAME = mat2cnet
 
 include $(ISISROOT)/make/isismake.tsts
@@ -9,8 +10,9 @@ commands:
 	match=$(INPUT)/pts.mat \
 	list3=$(OUTPUT)/cub3.lis \
 	onet=$(OUTPUT)/mat2cnetTruth1.net \
-	description="Default Test Network" \
+	description="Lock Measures Test Network" \
 	networkid=TestNet01 \
-	target=Titan > /dev/null;
+	target=Titan \
+    measurelock=true > /dev/null;
 	rm -f $(OUTPUT)/cub2.lis;
 	rm -f $(OUTPUT)/cub3.lis;
