Had to remove the STANDARD_DEVIATION keyword from output.pvl due to roundoff issues on different platforms
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2849 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/messenger/apps/mdis2pds/tsts/site_id/Makefile
+++ b/isis/src/messenger/apps/mdis2pds/tsts/site_id/Makefile
@@ -1,7 +1,7 @@
 APPNAME = mdis2pds
 
 output.cub.TOLERANCE = 0.0000000002
-output.pvl.IGNORELINES = PRODUCT_CREATION_TIME
+output.pvl.IGNORELINES = PRODUCT_CREATION_TIME STANDARD_DEVIATION
 #NOPREFERENCES=
 
 include $(ISISROOT)/make/isismake.tsts
