Changed the default of the parameter MODE to Ground as per request. Furthermore, latinc and loninc's default values have been raised to 10.0 over 1.0. This should resolve #178
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2854 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/grid/tsts/ground/Makefile
+++ b/isis/src/base/apps/grid/tsts/ground/Makefile
@@ -4,19 +4,19 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/ab102401.map.cub \
-	to=$(OUTPUT)/groundTruth1.cub \
+	to=$(OUTPUT)/groundTruth1.cub latinc=1.0 loninc=1.0 \
 	mode=ground > /dev/null;
 	$(APPNAME) from=$(INPUT)/ab102401.map.cub \
-	to=$(OUTPUT)/groundTruth2.cub \
+	to=$(OUTPUT)/groundTruth2.cub latinc=1.0 loninc=1.0 \
 	mode=ground ticks=true > /dev/null;
 	$(APPNAME) from=$(INPUT)/ab102401.map.cub \
-	to=$(OUTPUT)/groundTruth3.cub \
+	to=$(OUTPUT)/groundTruth3.cub latinc=1.0 loninc=1.0 \
 	mode=ground ticks=true diagonal=true > /dev/null;
 	$(APPNAME) from=$(INPUT)/ab102401.map.cub \
-	to=$(OUTPUT)/groundTruth4.cub \
+	to=$(OUTPUT)/groundTruth4.cub latinc=1.0 loninc=1.0 \
 	mode=ground minlat=16.5 maxlat=32.5 minlon=220.5 maxlon=233.5 \
 	> /dev/null;
 	$(APPNAME) from=$(INPUT)/ab102401.map.cub \
-	to=$(OUTPUT)/groundTruth5.cub \
+	to=$(OUTPUT)/groundTruth5.cub latinc=1.0 loninc=1.0 \
 	mode=ground minlat=16.5 maxlat=32.5 minlon=220.5 maxlon=233.5 \
 	boundary=true > /dev/null;
