--- a/isis/src/base/apps/grid/tsts/image/Makefile
+++ b/isis/src/base/apps/grid/tsts/image/Makefile
@@ -4,8 +4,8 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/peaks.cub \
-	to=$(OUTPUT)/imageTruth1.cub > /dev/null;
+	to=$(OUTPUT)/imageTruth1.cub mode=image > /dev/null;
 	$(APPNAME) from=$(INPUT)/peaks.cub ticks=yes \
-	to=$(OUTPUT)/imageTruth2.cub > /dev/null;
+	to=$(OUTPUT)/imageTruth2.cub mode=image > /dev/null;
 	$(APPNAME) from=$(INPUT)/peaks.cub ticks=yes diagonal=yes \
-	to=$(OUTPUT)/imageTruth3.cub > /dev/null;
+	to=$(OUTPUT)/imageTruth3.cub mode=image > /dev/null;
