Modified app tests to provide VIR housekeeping tables and add appropriate test files
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2861 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/dawn/apps/dawnvir2isis/tsts/IR/Makefile
+++ b/isis/src/dawn/apps/dawnvir2isis/tsts/IR/Makefile
@@ -4,7 +4,12 @@ labels.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
 
 include $(ISISROOT)/make/isismake.tsts
 
+#  The sed command is use to delete the SourceFile keyword from the label which
+#  can span two lines.
 commands:
 	$(APPNAME) from=$(INPUT)/VIR_IR_1A_1_362681634_1.LBL \
          to=$(OUTPUT)/VIR_IR_1A_1_362681634_1.cub > /dev/null;
-	catlab from=$(OUTPUT)/VIR_IR_1A_1_362681634_1.cub >& $(OUTPUT)/labels.txt;
+	catlab from=$(OUTPUT)/VIR_IR_1A_1_362681634_1.cub  \
+	  | sed '/SourceFile/{N;N;d;}' > $(OUTPUT)/labels.txt;
+	tabledump from=$(OUTPUT)/VIR_IR_1A_1_362681634_1.cub \
+	  to=$(OUTPUT)/table.txt name=VIRHouseKeeping;
