changed ONET_FORMAT to ONET_PREFIX
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2914 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetsplit/tsts/splitCnet/Makefile
+++ b/isis/src/control/apps/cnetsplit/tsts/splitCnet/Makefile
@@ -4,7 +4,7 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) cnet=$(INPUT)/autoseed.net \
-	  onet_format=$(OUTPUT)/outsplit?? \
+	  onet_prefix=$(OUTPUT)/outsplit?? \
 	  num_output_files=2 > /dev/null;
 	  cnetmerge inputtype=cnets \
 	  cnet=$(OUTPUT)/outsplit01.net \
