Added same bilinear interpolation scheme that the cameras use.  Fix app tests, documentation, examples.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2925 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetnewradii/tsts/allsuccesses/Makefile
+++ b/isis/src/control/apps/cnetnewradii/tsts/allsuccesses/Makefile
@@ -5,6 +5,5 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) CNET=$(INPUT)/AS15_Rev4_Reg_wLOLA.edited.net \
 	MODEL=$(INPUT)/ldem_8ppd_LATneg30toneg15_LON140to180.cub \
-	TO=$(OUTPUT)/outputcnet.net getlatlon=apriori \
-	networkid=AllSuccessesTestCase_CnetNewRadii \
+	ONET=$(OUTPUT)/outputcnet.net getlatlon=apriori \
 	errors=$(OUTPUT)/errors.pvl > /dev/null;
