--- a/isis/src/control/apps/cnetnewradii/tsts/errors/Makefile
+++ b/isis/src/control/apps/cnetnewradii/tsts/errors/Makefile
@@ -7,8 +7,7 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) CNET=$(INPUT)/AS15_Rev4_Reg_wLOLA.edited.net \
 	  MODEL=$(INPUT)/ldem_8ppd_LATneg15to0_LON140to180.cub \
-	  TO=$(OUTPUT)/outputcnet.pvl getlatlon=adjusted \
-	  networkid=ErrorsTestCase_CnetNewRadii \
+	  ONET=$(OUTPUT)/outputcnet.pvl getlatlon=adjusted \
 	  errors=errors.pvl \
 	  2>> $(OUTPUT)/error1.txt > /dev/null;
 	cat $(OUTPUT)/error1.txt | sed s+/usgs.*errors/++g > $(OUTPUT)/error.txt;
