--- a/isis/src/control/apps/cnettable/tsts/allowErrors/Makefile
+++ b/isis/src/control/apps/cnettable/tsts/allowErrors/Makefile
@@ -3,13 +3,13 @@ APPNAME = cnettable
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	find $(INPUT)/*.cub > $(INPUT)/cubeList.lst; \
-	$(APPNAME) fromlist=$(INPUT)/cubeList.lst \
+	find $(INPUT)/*.cub > $(OUTPUT)/cubeList.lst; \
+	$(APPNAME) fromlist=$(OUTPUT)/cubeList.lst \
 	cnet=$(INPUT)/testNet.net \
 	flatfile=$(OUTPUT)/cnetstats.txt \
 	allowErrors = true \
 	> /dev/null;
-	rm -f $(INPUT)/cubeList.lst > /dev/null;
+	rm -f $(OUTPUT)/cubeList.lst > /dev/null;
 	cat $(OUTPUT)/cnetstats.txt | sed s/,\[^,]\*\.cub,/,file.cub,/ \
 	 | sed 's/\([0-9][0-9]*\.[0-9]\)\([0-9][0-9]*\)/\1/g' \
 	 | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
