Test no longer creates files in input directory
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3033 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnettable/tsts/append/Makefile
+++ b/isis/src/control/apps/cnettable/tsts/append/Makefile
@@ -4,12 +4,12 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	cp $(INPUT)/appendTo.txt $(OUTPUT); \
-	find $(INPUT)/*.cub > $(INPUT)/cubeList.lst; \
-	$(APPNAME) fromlist=$(INPUT)/cubeList.lst \
+	find $(INPUT)/*.cub > $(OUTPUT)/cubeList.lst; \
+	$(APPNAME) fromlist=$(OUTPUT)/cubeList.lst \
 	cnet=$(INPUT)/testNet.net \
 	flatfile=$(OUTPUT)/appendTo.txt \
 	  append=true > /dev/null; 
-	rm -f $(INPUT)/cubeList.lst > /dev/null;
+	rm -f $(OUTPUT)/cubeList.lst > /dev/null;
 	cat $(OUTPUT)/appendTo.txt | sed s/,\[^,]\*\.cub,/,file.cub,/ \
 	  | sed 's/\([0-9][0-9]*\.[0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
