Test no longer creates files in input directory
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3035 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/odyssey/apps/thmproc/tsts/ir/Makefile
+++ b/isis/src/odyssey/apps/thmproc/tsts/ir/Makefile
@@ -5,9 +5,12 @@ I02343002RDR.lev2.cub.TOLERANCE = 0.00000000001
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) FROM=$(INPUT)/I02343002RDR.QUB \
+	$(CP) $(INPUT)/I02343002RDR.QUB $(OUTPUT)/input_I02343002RDR.QUB; \
+	$(APPNAME) FROM=$(OUTPUT)/input_I02343002RDR.QUB \
 	TO=$(OUTPUT)/I02343002RDR.lev1.cub \
-	MAPPING=no BANDS=2 > /dev/null;
-	$(APPNAME) FROM=$(INPUT)/I02343002RDR.cub \
+	MAPPING=no BANDS=2 > /dev/null; \
+	$(CP) $(INPUT)/I02343002RDR.cub $(OUTPUT)/input_I02343002RDR.cub; \
+	$(APPNAME) FROM=$(OUTPUT)/input_I02343002RDR.cub \
 	TO=$(OUTPUT)/I02343002RDR.lev2.cub \
-	BANDS=1 PIXRES=951.5269 INGEST=NO > /dev/null;
+	BANDS=1 PIXRES=951.5269 INGEST=NO > /dev/null; \
+	$(RM) $(OUTPUT)/input_*
