Test no longer creates files in input directory
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3036 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/odyssey/apps/thmproc/tsts/vis/Makefile
+++ b/isis/src/odyssey/apps/thmproc/tsts/vis/Makefile
@@ -5,9 +5,12 @@ V05642009RDR.cub.TOLERANCE = 0.0000000002
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) FROM=$(INPUT)/V05642009EDR.QUB \
+	$(CP) $(INPUT)/V05642009EDR.QUB $(OUTPUT)/input_V05642009EDR.QUB; \
+	$(APPNAME) FROM=$(OUTPUT)/input_V05642009EDR.QUB \
 	TO=$(OUTPUT)/V05642009EDR \
-	MAPPING=no BANDS=2 > /dev/null;
-	$(APPNAME) FROM=$(INPUT)/V05642009RDR.QUB \
+	MAPPING=no BANDS=2 > /dev/null; \
+	$(CP) $(INPUT)/V05642009RDR.QUB $(OUTPUT)/input_V05642009RDR.QUB; \
+	$(APPNAME) FROM=$(OUTPUT)/input_V05642009RDR.QUB \
 	TO=$(OUTPUT)/V05642009RDR \
-	MAPPING=yes BANDS=2 PIXRES=200 > /dev/null;
+	MAPPING=yes BANDS=2 PIXRES=200 > /dev/null; \
+	$(RM) $(OUTPUT)/input_*
