added pause to Pipeline for option in hijitter to create a ck
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3047 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/mro/apps/hijitter/tsts/default/Makefile
+++ b/isis/src/mro/apps/hijitter/tsts/default/Makefile
@@ -8,5 +8,11 @@ commands:
 	$(LS) $(OUTPUT)/*.cub > $(OUTPUT)/outlist.lis;
 	$(APPNAME) FROMLIST=$(OUTPUT)/files.lis MASTER=5 \
 	  JITTER=$(INPUT)/PSP_007556_2010.cropped.txt \
-	  REGDEF=$(INPUT)/hijitreg.p0745.s1570.def TO=$(OUTPUT)/outlist.lis > /dev/null ;
+	  JITTERCK=$(OUTPUT)/jitter.bc \
+	  REGDEF=$(INPUT)/hijitreg.p0745.s1570.def TO=$(OUTPUT)/outlist.lis > /dev/null;
+	$(CP) $(INPUT)/PSP_007556_2010_RED5.balance.cropped.cub $(OUTPUT)/red5.cub > /dev/null;
+	spiceinit from=$(OUTPUT)/red5.cub ck=$(OUTPUT)/jitter.bc > /dev/null;
+	tabledump from=$(OUTPUT)/red5.cub \
+	  to=$(OUTPUT)/cktable.txt name=InstrumentPointing > /dev/null;
 	$(RM) $(OUTPUT)/files.lis $(OUTPUT)/outlist.lis > /dev/null;
+	$(RM) $(OUTPUT)/jitter.bc $(OUTPUT)/red5.cub > /dev/null;
