Updated truth file
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3168 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/phoemplocal/tsts/case01/Makefile
+++ b/isis/src/base/apps/phoemplocal/tsts/case01/Makefile
@@ -7,3 +7,7 @@ commands:
 	  b0=3.18 theta=20 hg1=-.4 hg2=0 model=lunarlambert \
 	  emission=0 phase=45 incidence=45 rms_slope=10 \
 	  seed_number=0 seed=yes > /dev/null;
+	cat $(OUTPUT)/henyey_lunlam_noatm.pvl | \
+	  sed 's/\([0-9]*\.[0-9]\{5\}\)[0-9]*/\1/g' \
+	  > $(OUTPUT)/temp.txt;
+	$(MV) $(OUTPUT)/temp.txt $(OUTPUT)/henyey_lunlam_noatm.pvl;
