--- a/isis/src/control/apps/jigsaw/tsts/radar/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/radar/Makefile
@@ -18,7 +18,7 @@ commands:
 	cat bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
 	  | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
 	  | sed 's/\/[^,]*\/\([^,\/]*\.net\)/\1/g' \
-	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
+	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
 	  > $(OUTPUT)/bundleout.txt
 	# The above command uses sed to do the following (in order):
