Fixed tests because application interface has changed
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3237 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/photemplate/tsts/default/Makefile
+++ b/isis/src/base/apps/photemplate/tsts/default/Makefile
@@ -3,4 +3,6 @@ APPNAME = photemplate
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) pvl=$(OUTPUT)/default.pvl > /dev/null;
+	$(APPNAME) topvl=$(OUTPUT)/default.pvl phtname=lambert \
+	atmname=isotropic2 tau=.28 tauref=0.0 wha=.95 hnorm=.003 \
+	> /dev/null;
