--- a/isis/src/base/apps/photemplate/tsts/atmos/Makefile
+++ b/isis/src/base/apps/photemplate/tsts/atmos/Makefile
@@ -3,8 +3,12 @@ APPNAME = photemplate
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) pvl=$(OUTPUT)/anisotropic.pvl normalization=atmalbedo > /dev/null;
-	$(APPNAME) pvl=$(OUTPUT)/hapkeatm.pvl normalization=atmalbedo \
-	atmospheric=hapkeatm1 > /dev/null;
-	$(APPNAME) pvl=$(OUTPUT)/isotropic.pvl normalization=atmalbedo \
-	atmospheric=isotropic1 > /dev/null;
+	$(APPNAME) topvl=$(OUTPUT)/anisotropic.pvl phtname=minnaert \
+	k=1.0 atmname=anisotropic1 tau=.28 tauref=0.0 wha=.95 \
+        bha=.85 hnorm=.003 > /dev/null;
+	$(APPNAME) topvl=$(OUTPUT)/hapkeatm.pvl phtname=minnaert \
+	k=1.0 atmname=hapkeatm1 tau=.28 tauref=0.0 wha=.95 \
+	hga=.85 hnorm=.003 > /dev/null;
+	$(APPNAME) topvl=$(OUTPUT)/isotropic.pvl phtname=minnaert \
+	k=1.0 atmname=isotropic1 tau=.28 tauref=0.0 wha=.95 \
+	hnorm=.003 > /dev/null;
