--- a/isis/src/base/apps/photomet/tsts/clemMaxemiMaxinc/Makefile
+++ b/isis/src/base/apps/photomet/tsts/clemMaxemiMaxinc/Makefile
@@ -5,6 +5,6 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/lub2303j.191.lev1.cub \
 	to=$(OUTPUT)/lub2303j.191.lev1.phot.cub \
-	phopar=$(INPUT)/clem.pvl \
+	frompvl=$(INPUT)/clem.pvl \
 	maxe=4.0 \
 	maxi=5.0 > /dev/null;
