Fixed test because of change to interface
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3251 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/photomet/tsts/clemMaxincidence/Makefile
+++ b/isis/src/base/apps/photomet/tsts/clemMaxincidence/Makefile
@@ -5,5 +5,5 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/lub2303j.191.lev1.cub \
 	to=$(OUTPUT)/lub2303j.191.lev1.phot.cub \
-	phopar=$(INPUT)/clem.pvl \
+	frompvl=$(INPUT)/clem.pvl \
 	maxincidence=5.0 > /dev/null;
