--- a/isis/src/base/apps/photomet/tsts/messMaxincidence/Makefile
+++ b/isis/src/base/apps/photomet/tsts/messMaxincidence/Makefile
@@ -5,5 +5,5 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/EN0031257484M.iof.cub \
 	to=$(OUTPUT)/EN0031257484M.phot.cub \
-	phopar=$(INPUT)/pvlfile.txt \
+	frompvl=$(INPUT)/pvlfile.txt \
 	maxincidence=75 > /dev/null;
