--- a/isis/src/base/apps/photomet/tsts/clemMaxemission/Makefile
+++ b/isis/src/base/apps/photomet/tsts/clemMaxemission/Makefile
@@ -5,5 +5,5 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/lub2303j.191.lev1.cub \
 	to=$(OUTPUT)/lub2303j.191.lev1.phot.cub \
-	phopar=$(INPUT)/clem.pvl \
+	frompvl=$(INPUT)/clem.pvl \
 	maxemission=4.0 > /dev/null;
