--- a/isis/src/base/apps/caminfo/tsts/csv/Makefile
+++ b/isis/src/base/apps/caminfo/tsts/csv/Makefile
@@ -9,7 +9,7 @@ commands:
 	STATISTICS=true CAMSTATS=true GEOMETRY=true spice=true > /dev/null;
 	cat $(OUTPUT)/temp.txt | \
 	  sed 's/\([0-9]*\.[0-9]\{4\}\)\([0-9]*\)/\1/g' | \
-	  sed 's/\([a-z]*\,\)\([0-9]\.[0-9]\.[0-9]\.[0-9] [a-z]* | [0-9]\{4\}\-[0-9]\{2\}\-[0-9]\{2\}\)/\1/g' \
+	  sed 's/\([a-z]*\,\)\([0-9]\.[0-9]*\.[0-9]*\.[0-9]* [a-z]* | [0-9]\{4\}\-[0-9]\{2\}\-[0-9]\{2\}\)/\1/g' \
 	  > $(OUTPUT)/truth.txt;
 	$(RM) $(OUTPUT)/temp.txt;
 	$(RM) $(OUTPUT)/input.cub;
