Changed SPARSE solve method to OLDSPARSE, changed CHOLMOD to SPARSE, and updated documentation and tests.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3329 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/jigsaw/tsts/apollo/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/apollo/Makefile
@@ -14,7 +14,7 @@ commands:
 	update=no \
 	maxits=50 \
 	method=specialk \
-	errorpropagation=no \
+	errorpropagation=yes \
 	outlier_rejection=no \
 	sigma0=1.e-10  \
 	ckdegree=yes \
