--- a/isis/src/control/apps/jigsaw/tsts/case01/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/case01/Makefile
@@ -9,7 +9,7 @@ commands:
 	cnet=$(INPUT)/redPntreg.net \
 	onet=$(OUTPUT)/case01OutNet.net \
 	observations=yes \
-	method=sparse \
+	method=oldsparse \
 	solvedegree=3 \
 	camsolve=all \
 	update=yes \
