Created new appTest and renamed old appTest. Added documentation to Makefiles
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3360 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetsplit/tsts/splitCnet/Makefile
+++ b/isis/src/control/apps/cnetsplit/tsts/splitCnet/Makefile
@@ -1,15 +1,13 @@
+# This test will split a control net with 8 points into 3 output control nets
+# we should get 
+#     outsplit01 with points 1,2,3
+#     outsplit02 with points 4,5,6
+#     outsplit03 with points 7,8
 APPNAME = cnetsplit
 
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) cnet=$(INPUT)/autoseed.net \
+	$(APPNAME) cnet=$(INPUT)/controlNet.net \
 	  onet_prefix=$(OUTPUT)/outsplit?? \
-	  num_output_files=2 > /dev/null;
-	  cnetmerge inputtype=cnets \
-	  cnet=$(OUTPUT)/outsplit01.net \
-	  cnet2=$(OUTPUT)/outsplit02.net \
-	  networkid=autoseed \
-	  description=cnetsplit \
-	  onet=$(OUTPUT)/truth.net > /dev/null;
-	  $(RM) $(OUTPUT)/outsplit*;
+	  num_output_files=3 > /dev/null;
