Fixed previous commit with commnented lines in Makefiles
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3406 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/autoseed/tsts/seeddef/Makefile
+++ b/isis/src/control/apps/autoseed/tsts/seeddef/Makefile
@@ -40,4 +40,4 @@ commands:
 	onet=$(OUTPUT)/new.dn.net \
 	networkid=NewNetwork pointid="new????" description=NewNetwork \
 	> /dev/null;
-	#$(RM) $(OUTPUT)/list.lis;
+	$(RM) $(OUTPUT)/list.lis;
