--- a/isis/src/control/apps/autoseed/tsts/overlap/Makefile
+++ b/isis/src/control/apps/autoseed/tsts/overlap/Makefile
@@ -24,5 +24,5 @@ commands:
 	pointid="new????" \
 	description=NewNetwork \
 	> /dev/null;
-	#$(RM) $(OUTPUT)/list.lis;
-	#$(RM) $(OUTPUT)/sub.lis;
+	$(RM) $(OUTPUT)/list.lis;
+	$(RM) $(OUTPUT)/sub.lis;
