--- a/isis/src/base/apps/spiceinit/tsts/nadirCKgap/Makefile
+++ b/isis/src/base/apps/spiceinit/tsts/nadirCKgap/Makefile
@@ -9,4 +9,6 @@ commands:
 	$(APPNAME) from=$(OUTPUT)/nadirTruth.cub attach=no cknadir=yes \
 	tspk='$$base/kernels/spk/de405.bsp' > /dev/null;
 	catlab from=$(OUTPUT)/nadirTruth.cub > $(OUTPUT)/labels.txt;
+	$(APPNAME) from=$(OUTPUT)/nadirTruth.cub attach=no \
+	tspk='$$base/kernels/spk/de405.bsp' >& $(OUTPUT)/error.txt || true;
 	rm $(OUTPUT)/nadirTruth.cub;
