Updated documentation, added better error checking, updated app tests
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3468 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/photomet/tsts/clemMaxemiMaxinc/Makefile
+++ b/isis/src/base/apps/photomet/tsts/clemMaxemiMaxinc/Makefile
@@ -6,5 +6,6 @@ commands:
 	$(APPNAME) from=$(INPUT)/lub2303j.191.lev1.cub \
 	to=$(OUTPUT)/lub2303j.191.lev1.phot.cub \
 	frompvl=$(INPUT)/clem.pvl \
-	maxe=4.0 \
-	maxi=5.0 > /dev/null;
+	maxe=4.0 maxi=5.0 normname=moonalbedo \
+	phtname=lunarlambertmcewen xmul=1.0 wl=1.0 \
+	xb1=-.0817 xb2=.0081 > /dev/null;
