Fixed some problems with user interface
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3490 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/photemplate/tsts/atmos/Makefile
+++ b/isis/src/base/apps/photemplate/tsts/atmos/Makefile
@@ -5,10 +5,10 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) topvl=$(OUTPUT)/anisotropic.pvl phtname=minnaert \
 	k=1.0 atmname=anisotropic1 tau=.28 tauref=0.0 wha=.95 \
-        bha=.85 hnorm=.003 > /dev/null;
+        bha=.85 hnorm=.003 nulneg=yes > /dev/null;
 	$(APPNAME) topvl=$(OUTPUT)/hapkeatm.pvl phtname=minnaert \
 	k=1.0 atmname=hapkeatm1 tau=.28 tauref=0.0 wha=.95 \
-	hga=.85 hnorm=.003 > /dev/null;
+	hga=.85 hnorm=.003 nulneg=yes > /dev/null;
 	$(APPNAME) topvl=$(OUTPUT)/isotropic.pvl phtname=minnaert \
 	k=1.0 atmname=isotropic1 tau=.28 tauref=0.0 wha=.95 \
-	hnorm=.003 > /dev/null;
+	hnorm=.003 nulneg=yes > /dev/null;
