--- a/isis/src/base/apps/photemplate/tsts/default/Makefile
+++ b/isis/src/base/apps/photemplate/tsts/default/Makefile
@@ -5,4 +5,4 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) topvl=$(OUTPUT)/default.pvl phtname=lambert \
 	atmname=isotropic2 tau=.28 tauref=0.0 wha=.95 hnorm=.003 \
-	> /dev/null;
+	nulneg=yes > /dev/null;
