Updated documentation and fixed bug where where detector resolution was being reported incorectly
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3499 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/phocube/tsts/allbands/Makefile
+++ b/isis/src/base/apps/phocube/tsts/allbands/Makefile
@@ -12,6 +12,8 @@ commands:
 	  phase=true \
 	  emission=true \
 	  incidence=true \
+	  localemission=true \
+	  localincidence=true \
 	  latitude=true \
 	  longitude=true \
 	  pixelresolution=true \
