Changed output to be PVL
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3533 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/dawn/apps/dawnvir2isis/tsts/VIS/Makefile
+++ b/isis/src/dawn/apps/dawnvir2isis/tsts/VIS/Makefile
@@ -1,7 +1,5 @@
 APPNAME = dawnvir2isis
 
-labels.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
-
 include $(ISISROOT)/make/isismake.tsts
 
 #  The sed command is use to delete the SourceFile keyword from the label which
@@ -10,6 +8,6 @@ commands:
 	$(APPNAME) from=$(INPUT)/VIR_VIS_1A_1_362681635_1.LBL \
          to=$(OUTPUT)/VIR_VIS_1A_1_362681635_1.cub > /dev/null;
 	catlab from=$(OUTPUT)/VIR_VIS_1A_1_362681635_1.cub  \
-	  | sed '/SourceFile/{N;N;d;}' > $(OUTPUT)/labels.txt;
+	  > $(OUTPUT)/labels.pvl;
 	tabledump from=$(OUTPUT)/VIR_VIS_1A_1_362681635_1.cub \
 	  to=$(OUTPUT)/table.txt name=VIRHouseKeeping;
